Bug 10570 - [regression] test suite regressions on mips{,el}-linux-gnu
Summary: [regression] test suite regressions on mips{,el}-linux-gnu
Status: RESOLVED FIXED
Alias: None
Product: binutils
Classification: Unclassified
Component: gas (show other bugs)
Version: 2.20
: P2 normal
Target Milestone: ---
Assignee: unassigned
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-08-28 11:46 UTC by Matthias Klose
Modified: 2009-08-31 18:49 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matthias Klose 2009-08-28 11:46:05 UTC
seen with trunk 20090827, not seen with 20090805:

Test results, compared with installed binutils:
W: [gas/mips/mips.exp] REGRESSION (PASS -> FAIL): MIPS16e (sb1)
W: [gas/mips/mips.exp] REGRESSION (PASS -> FAIL): MIPS16e (octeon)
W: [gas/mips/mips.exp] REGRESSION (PASS -> FAIL): mips16-64
W: [gas/mips/mips.exp] REGRESSION (PASS -> FAIL): mips16e save/restore
W: [gas/mips/mips.exp] REGRESSION (PASS -> FAIL): MIPS16 reloc
W: [gas/mips/mips.exp] REGRESSION (PASS -> FAIL): mips16
W: [gas/mips/mips.exp] REGRESSION (PASS -> FAIL): MIPS16 reloc 2
W: [gas/mips/mips.exp] REGRESSION (PASS -> FAIL): MIPS16 lui/addi
W: [gas/mips/mips.exp] REGRESSION (PASS -> FAIL): MIPS16e (mips64)
W: [gas/mips/mips.exp] REGRESSION (PASS -> FAIL): MIPS16e (mips32r2)
W: [gas/mips/mips.exp] REGRESSION (PASS -> FAIL): MIPS16e (mips64r2)
W: [gas/mips/mips.exp] REGRESSION (PASS -> FAIL): MIPS16e (xlr)
W: [gas/mips/mips.exp] REGRESSION (PASS -> FAIL): MIPS16e (mips32)
W: [ld-mips-elf/mips-elf.exp] REGRESSION (PASS -> FAIL): MIPS16 PIC test 1
W: [ld-mips-elf/mips-elf.exp] REGRESSION (PASS -> FAIL): MIPS16 PIC test 2
W: [ld-mips-elf/mips-elf.exp] REGRESSION (PASS -> FAIL): MIPS16 interlinking for
local functions 1
16 REGRESSIONS (1.05%).
1518 tests: 1405 pass (92.56%), 90 fail (5.93%), 21 xfail (1.38%) 0 untested
(0.00%).

complete build logs at:
https://buildd.debian.org/fetch.cgi?&pkg=binutils&ver=2.19.51.20090827-1&arch=mips&stamp=1251415690&file=log
https://buildd.debian.org/fetch.cgi?&pkg=binutils&ver=2.19.51.20090827-1&arch=mipsel&stamp=1251398762&file=log
Comment 1 Sourceware Commits 2009-08-31 18:45:45 UTC
Subject: Bug 10570

CVSROOT:	/cvs/src
Module name:	src
Changes by:	hjl@sourceware.org	2009-08-31 18:45:26

Modified files:
	gas            : ChangeLog write.c 

Log message:
	2009-08-31  H.J. Lu  <hongjiu.lu@intel.com>
	
	PR gas/10570
	* write.c (write_object_file): Revert the accidental change
	made in revision 1.124 on 2009-08-17.

Patches:
http://sources.redhat.com/cgi-bin/cvsweb.cgi/src/gas/ChangeLog.diff?cvsroot=src&r1=1.3913&r2=1.3914
http://sources.redhat.com/cgi-bin/cvsweb.cgi/src/gas/write.c.diff?cvsroot=src&r1=1.124&r2=1.125

Comment 2 H.J. Lu 2009-08-31 18:49:04 UTC
Fixed.